welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:1: error: not found: value Maths
def nearHundred(n:Int): Boolean = {if (Maths.abs((100-n))<10||(Maths.abs((200-n))<10)) return true 
                                       ^nearHundred:1: error: not found: value Maths
def nearHundred(n:Int): Boolean = {if (Maths.abs((100-n))<10||(Maths.abs((200-n))<10)) return true 
                                                               ^